--- a/select.html
+++ b/select.html
@@ -88,7 +88,7 @@
     <div class="tab-pane" id="pills-vote" role="tabpanel" aria-labelledby="pills-vote-tab">
       <section class="orangebox vote">
         <div class="voteListBox">
-          <ul class="voteList">
+          <ul class="voteList" id="voteList">
             <li class="voteElement">
               <img class="voteImage" src="img/profile_img.jpg" alt="">
               <div class="imageInfo">
