--- a/select.html
+++ b/select.html
@@ -90,7 +90,7 @@
         <div class="voteListBox">
           <ul class="voteList" id="voteList">
             <li class="voteElement">
-              <img class="voteImage" src="img/profile_img.jpg" alt="">
+              <img class="voteImage" src="img/image.jpg" alt="">
               <div class="imageInfo">
                 <img class="image_user" src="img/profile_img.jpg" alt="">
                 <div>
@@ -103,7 +103,7 @@
               <input class="form-check-input shadow-none" type="checkbox" value="" id="image_vote">
             </li>
             <li class="voteElement">
-              <img class="voteImage" src="img/profile_img.jpg" alt="">
+              <img class="voteImage" src="img/image.jpg" alt="">
               <div class="imageInfo">
                 <img class="image_user" src="img/profile_img.jpg" alt="">
                 <div>
@@ -116,7 +116,7 @@
               <input class="form-check-input shadow-none" type="checkbox" value="" id="image_vote">
             </li>
             <li class="voteElement">
-              <img class="voteImage" src="img/profile_img.jpg" alt="">
+              <img class="voteImage" src="img/image.jpg" alt="">
               <div class="imageInfo">
                 <img class="image_user" src="img/profile_img.jpg" alt="">
                 <div>
@@ -130,7 +130,7 @@
             </li>
             
             <li class="voteElement">
-              <img class="voteImage" src="img/profile_img.jpg" alt="">
+              <img class="voteImage" src="img/image.jpg" alt="">
               <div class="imageInfo">
                 <img class="image_user" src="img/profile_img.jpg" alt="">
                 <div>
@@ -144,7 +144,7 @@
             </li>
             
             <li class="voteElement">
-              <img class="voteImage" src="img/profile_img.jpg" alt="">
+              <img class="voteImage" src="img/image.jpg" alt="">
               <div class="imageInfo">
                 <img class="image_user" src="img/profile_img.jpg" alt="">
                 <div>
@@ -157,7 +157,7 @@
               <input class="form-check-input shadow-none" type="checkbox" value="" id="image_vote">
             </li>
             <li class="voteElement">
-              <img class="voteImage" src="img/profile_img.jpg" alt="">
+              <img class="voteImage" src="img/image.jpg" alt="">
               <div class="imageInfo">
                 <img class="image_user" src="img/profile_img.jpg" alt="">
                 <div>
@@ -170,25 +170,12 @@
               <input class="form-check-input shadow-none" type="checkbox" value="" id="image_vote">
             </li>
             <li class="voteElement">
-              <img class="voteImage" src="img/profile_img.jpg" alt="">
+              <img class="voteImage" src="img/image.jpg" alt="">
               <div class="imageInfo">
                 <img class="image_user" src="img/profile_img.jpg" alt="">
                 <div>
                   <div class="image_comment">30자 코멘트</div>
                   <div class="image_name">일곱번째</div>
-                </div>
-              </div>
-              <div class="voteScroll"></div>
-              <label class="form-check-label" for="image_vote">
-              <input class="form-check-input shadow-none" type="checkbox" value="" id="image_vote">
-            </li>
-            <li class="voteElement">
-              <img class="voteImage" src="img/profile_img.jpg" alt="">
-              <div class="imageInfo">
-                <img class="image_user" src="img/profile_img.jpg" alt="">
-                <div>
-                  <div class="image_comment">30자 코멘트</div>
-                  <div class="image_name">마지막</div>
                 </div>
               </div>
               <div class="voteScroll"></div>
