--- a/select.html
+++ b/select.html
@@ -189,7 +189,7 @@
       </section>
     </div>
     <div class="tab-pane" id="pills-show" role="tabpanel" aria-labelledby="pills-show-tab">
-      <section class="orangebox">
+      <section class="orangebox show">
         <span class="showTxt">
           진행자가 사진을 공유하면
           <br>
