--- a/select.html
+++ b/select.html
@@ -45,8 +45,8 @@
         </button>
       </li>
       <li class="nav-item" role="presentation">
-        <button class="tabBtn nav-link" id="pills-show-tab" data-bs-toggle="pill" data-bs-target="#pills-show" 
-        type="button" role="tab" aria-controls="pills-show" aria-selected="false">
+        <button class="tabBtn nav-link" id="pills-slide-tab" data-bs-toggle="pill" data-bs-target="#pills-slide" 
+        type="button" role="tab" aria-controls="pills-slide" aria-selected="false">
           <img class="iconImg" src="img/view_icon.svg" alt="" width="21px" height="16.8px">
           <span>보기</span>
         </button>
@@ -188,9 +188,9 @@
         <img id="toggleCol" src="img/1row.svg" alt="" value="2" onclick="toggle_column(this)">
       </section>
     </div>
-    <div class="tab-pane" id="pills-show" role="tabpanel" aria-labelledby="pills-show-tab">
+    <div class="tab-pane" id="pills-slide" role="tabpanel" aria-labelledby="pills-slide-tab">
       <section class="orangebox slide">
-        <span class="showTxt">
+        <span class="slideTxt">
           진행자가 사진을 공유하면
           <br>
           이 화면에서 볼 수 있습니다.
