--- a/select.html
+++ b/select.html
@@ -190,11 +190,12 @@
     </div>
     <div class="tab-pane" id="pills-slide" role="tabpanel" aria-labelledby="pills-slide-tab">
       <section class="orangebox slide">
-        <span class="slideTxt">
+        <!-- <span class="slideTxt">
           진행자가 사진을 공유하면
           <br>
           이 화면에서 볼 수 있습니다.
-        </span>
+        </span> -->
+        <img src="img/toni-tan-unsplash.jpg" alt="" width="100%">
       </section>
     </div>
   </div>
