--- a/select.html
+++ b/select.html
@@ -195,7 +195,9 @@
           <br>
           이 화면에서 볼 수 있습니다.
         </span> -->
-        <img src="img/toni-tan-unsplash.jpg" alt="" width="98%">
+        <div id="slideContainer">
+          <img src="img/toni-tan-unsplash.jpg" alt="" width="100%">
+        </div>
       </section>
     </div>
   </div>
