--- a/select.html
+++ b/select.html
@@ -190,13 +190,13 @@
     </div>
     <div class="tab-pane" id="pills-slide" role="tabpanel" aria-labelledby="pills-slide-tab">
       <section class="orangebox slide">
-        <!-- <span class="slideTxt">
-          진행자가 사진을 공유하면
-          <br>
-          이 화면에서 볼 수 있습니다.
-        </span> -->
         <div id="slideContainer">
-          <img src="img/toni-tan-unsplash.jpg" alt="" width="100%">
+          <span class="slideTxt">
+            진행자가 사진을 공유하면
+            <br>
+            이 화면에서 볼 수 있습니다.
+          </span>
+          <!-- <img src="img/toni-tan-unsplash.jpg" alt="" width="100%" height="100%"> -->
         </div>
       </section>
     </div>
